:lipstick: publishing EditProfileInfoActivity

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="first_time_in_ia">#767676</color>
     <color name="selector_unchecked">#EAEAEA</color>
     <color name="my_page_background">#FFF2F2F2</color>
+    <color name="incorrect_red">#FFFF3120</color>
 </resources>
