--- a/presentation/src/main/res/layout/activity_edit_password.xml
+++ b/presentation/src/main/res/layout/activity_edit_password.xml
@@ -7,6 +7,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/password_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -118,6 +119,29 @@
             android:fontFamily="@font/pretendard_regular"
             app:layout_constraintTop_toBottomOf="@id/et_password"
             app:layout_constraintStart_toStartOf="@id/et_password" />
+        <TextView
+            android:id="@+id/tv_incorrect_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:text="@string/incorrect_password"
+            android:textSize="14sp"
+            android:textColor="@color/incorrect_red"
+            android:fontFamily="@font/pretendard_regular"
+            app:layout_constraintTop_toBottomOf="@id/et_password"
+            app:layout_constraintStart_toStartOf="@id/et_password" />
+        <TextView
+            android:id="@+id/tv_incorrect_new_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:text="@string/incorrect_password"
+            android:textSize="14sp"
+            android:textColor="@color/incorrect_red"
+            android:fontFamily="@font/pretendard_regular"
+            app:layout_constraintTop_toBottomOf="@id/et_new_password"
+            app:layout_constraintStart_toStartOf="@id/et_new_password" />
+
 
         <EditText
             android:id="@+id/et_password"
@@ -134,6 +158,16 @@
             app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:id="@+id/v_incorrect_password"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_incorrect_edittext"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="@id/et_password"
+            app:layout_constraintBottom_toBottomOf="@id/et_password"
+            app:layout_constraintStart_toStartOf="@id/et_password"
+            app:layout_constraintEnd_toEndOf="@id/et_password" />
         <EditText
             android:id="@+id/et_new_password"
             android:layout_width="wrap_content"
@@ -149,6 +183,16 @@
             app:layout_constraintTop_toBottomOf="@id/tv_new_password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:id="@+id/v_incorrect_new_password"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_incorrect_edittext"
+            android:visibility="invisible"
+            app:layout_constraintTop_toTopOf="@id/et_new_password"
+            app:layout_constraintBottom_toBottomOf="@id/et_new_password"
+            app:layout_constraintStart_toStartOf="@id/et_new_password"
+            app:layout_constraintEnd_toEndOf="@id/et_new_password" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
