--- a/presentation/src/main/res/layout/activity_edit_profile_info.xml
+++ b/presentation/src/main/res/layout/activity_edit_profile_info.xml
@@ -210,6 +210,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageView
+            android:id="@+id/iv_profile"
             android:layout_width="84dp"
             android:layout_height="84dp"
             app:layout_constraintTop_toTopOf="@id/g_iv_profile_t"
