:sparkles: complete password change function

--- a/presentation/src/main/res/layout/activity_edit_password.xml
+++ b/presentation/src/main/res/layout/activity_edit_password.xml
@@ -157,7 +157,8 @@
             android:fontFamily="@font/pretendard_regular"
             app:layout_constraintTop_toBottomOf="@id/tv_password"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:inputType="textPassword" />
         <View
             android:id="@+id/v_incorrect_password"
             android:layout_width="0dp"
@@ -182,7 +183,8 @@
             android:fontFamily="@font/pretendard_regular"
             app:layout_constraintTop_toBottomOf="@id/tv_new_password"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:inputType="textPassword" />
         <View
             android:id="@+id/v_incorrect_new_password"
             android:layout_width="0dp"
