item_major_filter 추가 및 RecyclerView xml 선언

--- a/presentation/src/main/res/layout/activity_login_page.xml
+++ b/presentation/src/main/res/layout/activity_login_page.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="login"
-            type="com.team_ia.idea_archive_android.ui.main.LoginActivity" />
+            type="com.team_ia.idea_archive_android.ui.login.LoginActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
