--- a/presentation/src/main/res/layout/activity_sign_up_page.xml
+++ b/presentation/src/main/res/layout/activity_sign_up_page.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="signup"
+            type="com.team_ia.idea_archive_android.ui.main.SignUpActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -265,6 +267,7 @@
             android:text="@string/check"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:onClick="@{signup::onClick}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_input_password_again" />
@@ -292,6 +295,7 @@
             android:text="@string/already_user_login"
             android:textColor="@color/sign_up_black"
             android:textSize="14sp"
+            android:onClick="@{signup::onClick}"
             app:layout_constraintStart_toEndOf="@id/tv_user_already"
             app:layout_constraintTop_toBottomOf="@id/btn_check" />
 
@@ -301,6 +305,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp"
             android:layout_marginTop="55dp"
+            android:onClick="@{signup::onClick}"
             android:background="@drawable/ibtn_back_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
