--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -208,14 +208,18 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_major_filter"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="@id/g_rv_major_filter_b"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/g_rv_major_filter_s"
                 app:layout_constraintTop_toTopOf="@id/g_rv_major_filter_t"
-                tools:listitem="@layout/item_major_filter" />
+                tools:listitem="@layout/item_major_filter">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
