--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -109,18 +109,17 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9487" />
 
-        <TextView
-            android:id="@+id/tv_entire_post"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:fontFamily="@font/pretendard_bold"
-            android:text="@string/entire"
-            android:textColor="@color/gray"
-            android:textSize="17sp"
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nv_mainpage"
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t"
             app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_entire_post_e"
             app:layout_constraintStart_toStartOf="@id/g_tv_entire_post_s"
-            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
+            app:layout_constraintEnd_toEndOf="@id/g_tv_job_opening_post_e">
+
+
+
 
         <TextView
             android:id="@+id/tv_idea"
@@ -170,6 +169,8 @@
             app:layout_constraintEnd_toEndOf="@id/g_btn_main_page_menu_bar_e"
             app:layout_constraintStart_toStartOf="@id/g_btn_main_page_menu_bar_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
+
+        </com.google.android.material.navigation.NavigationView>
 
         <Button
             android:id="@+id/btn_main_page_search_button"
