--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -111,12 +111,12 @@
 
         <com.google.android.material.navigation.NavigationView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
             android:id="@+id/nv_mainpage"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
             app:layout_constraintStart_toStartOf="@id/g_tv_entire_post_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_job_opening_post_e">
+            app:menu="@menu/menu_main_page_tab_bar">
 
 
 
