이메일 코드 전송는 성공

--- a/presentation/src/main/res/layout/activity_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/activity_auth_code_input_page.xml
@@ -217,7 +217,8 @@
             android:background="@drawable/bg_input_auth_code_edit_text"
             android:cursorVisible="false"
             android:nextFocusDown="@id/et_input_auth_code_2"
-            android:digits="1"
+            android:fontFamily="@font/pretendard_semibold"
+            android:maxLength="1"
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
             android:textSize="32sp"
@@ -232,7 +233,7 @@
             android:layout_height="0dp"
             android:background="@drawable/bg_input_auth_code_edit_text"
             android:cursorVisible="false"
-            android:digits="1"
+            android:maxLength="1"
             android:nextFocusDown="@id/et_input_auth_code_3"
             android:fontFamily="@font/pretendard_semibold"
             android:inputType="number"
@@ -249,7 +250,7 @@
             android:layout_height="0dp"
             android:background="@drawable/bg_input_auth_code_edit_text"
             android:cursorVisible="false"
-            android:digits="1"
+            android:maxLength="1"
             android:nextFocusDown="@id/et_input_auth_code_4"
             android:fontFamily="@font/pretendard_semibold"
             android:inputType="number"
@@ -266,7 +267,7 @@
             android:layout_height="0dp"
             android:background="@drawable/bg_input_auth_code_edit_text"
             android:cursorVisible="false"
-            android:digits="1"
+            android:maxLength="1"
             android:fontFamily="@font/pretendard_semibold"
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
@@ -285,6 +286,7 @@
             android:text="@string/check"
             android:textColor="@color/white"
             android:textSize="18sp"
+            android:onClick="@{authCodeInput::onClick}"
             app:layout_constraintBottom_toBottomOf="@id/g_check_btn_b"
             app:layout_constraintEnd_toEndOf="@id/g_check_btn_e"
             app:layout_constraintStart_toStartOf="@id/g_check_btn_s"
