:memo: :: 구현 방식을 navigationView가 아닌 fragment로 변경
:: 구현 방식을 navigationView가 아닌 fragment로 변경

--- a/presentation/src/main/res/layout/fragment_main_entire.xml
+++ b/presentation/src/main/res/layout/fragment_main_entire.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,6 +11,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_rv_major_filter_t"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1043" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_rv_major_filter_b"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1422" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_rv_major_filter_s"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.0410" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_major_filter"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="@id/g_rv_major_filter_b"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/g_rv_major_filter_s"
+            app:layout_constraintTop_toTopOf="@id/g_rv_major_filter_t"
+            tools:listitem="@layout/item_major_filter">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+    </layout>
