--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -109,17 +109,18 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9487" />
 
-        <com.google.android.material.navigation.NavigationView
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tv_entire"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:id="@+id/nv_mainpage"
-            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t"
+            android:fontFamily="@font/pretendard_bold"
+            android:text="@string/entire"
+            android:textColor="@color/gray"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_entire_post_e"
             app:layout_constraintStart_toStartOf="@id/g_tv_entire_post_s"
-            app:menu="@menu/menu_main_page_tab_bar">
-
-
-
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
         <TextView
             android:id="@+id/tv_idea"
@@ -170,8 +171,6 @@
             app:layout_constraintStart_toStartOf="@id/g_btn_main_page_menu_bar_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
-        </com.google.android.material.navigation.NavigationView>
-
         <Button
             android:id="@+id/btn_main_page_search_button"
             android:layout_width="0dp"
@@ -182,46 +181,5 @@
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g_rv_major_filter_t"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.1043" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g_rv_major_filter_b"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.1422" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/g_rv_major_filter_s"
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.0410" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_major_filter"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toBottomOf="@id/g_rv_major_filter_b"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/g_rv_major_filter_s"
-                app:layout_constraintTop_toTopOf="@id/g_rv_major_filter_t"
-                tools:listitem="@layout/item_major_filter">
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
