코드 리팩토링

--- a/presentation/src/main/res/layout/activity_sign_up_page.xml
+++ b/presentation/src/main/res/layout/activity_sign_up_page.xml
@@ -228,11 +228,10 @@
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
         app:layout_constraintStart_toStartOf="@id/g_input_information_s"
-        app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
-        app:layout_constraintTop_toTopOf="@id/g_input_password_t"
-        />
+        app:layout_constraintTop_toTopOf="@id/g_input_password_t" />
 
     <EditText
         android:id="@+id/et_input_password_again"
@@ -264,7 +263,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_input_password_again" />
 
-<!--    종인이가 해야될 일-->
+    <!--    종인이가 해야될 일-->
     <TextView
         android:id="@+id/tv_user_already"
         android:layout_width="wrap_content"
