--- a/presentation/src/main/res/layout/activity_profile.xml
+++ b/presentation/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,36 +25,42 @@
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="35dp" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_iv_profile_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1185" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_name_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2370" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_v_vertical_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2927" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_nav_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.3175" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_view_pager_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.3744" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_btn_detail_t"
             android:layout_width="match_parent"
@@ -69,36 +75,42 @@
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.0758" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_top_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_end="723dp" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_iv_profile_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2180" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_name_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2630" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_v_vertical_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.3045" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_nav_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.3555" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_btn_detail_b"
             android:layout_width="match_parent"
@@ -112,36 +124,42 @@
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.0308" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_back_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1128" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_my_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.4026" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_iv_profile_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.3923" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_name_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.4231" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_nav_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.0513" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_btn_detail_s"
             android:layout_width="match_parent"
@@ -155,36 +173,42 @@
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1026" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tb_back_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.2570" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_my_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5769" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_iv_profile_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.6077" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_name_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5796" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_nav_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9487" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_btn_detail_e"
             android:layout_width="match_parent"
@@ -197,14 +221,14 @@
             android:id="@+id/ibtn_back_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@drawable/bg_bottom_nav"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:src="@drawable/ibtn_back_button"
-            android:background="@drawable/bg_bottom_nav"
-            app:layout_constraintTop_toTopOf="@id/g_ibtn_back_button_t"
             app:layout_constraintBottom_toBottomOf="@id/g_ibtn_back_button_b"
+            app:layout_constraintEnd_toEndOf="@id/g_ibtn_back_button_e"
             app:layout_constraintStart_toStartOf="@id/g_ibtn_back_button_s"
-            app:layout_constraintEnd_toEndOf="@id/g_ibtn_back_button_e" />
+            app:layout_constraintTop_toTopOf="@id/g_ibtn_back_button_t" />
 
         <TextView
             android:id="@+id/tv_back"
@@ -214,90 +238,90 @@
             android:text="@string/back"
             android:textColor="@color/black"
             android:textSize="15sp"
-            app:layout_constraintTop_toTopOf="@id/g_tv_top_t"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_top_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tb_back_e"
             app:layout_constraintStart_toStartOf="@id/g_tv_back_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tb_back_e" />
+            app:layout_constraintTop_toTopOf="@id/g_tv_top_t" />
+
         <TextView
             android:id="@+id/tv_my"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:fontFamily="@font/pretendard_regular"
+            android:gravity="center"
             android:text="@string/my_page"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="@id/g_tv_top_t"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_top_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_my_e"
             app:layout_constraintStart_toStartOf="@id/g_tv_my_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_my_e" />
+            app:layout_constraintTop_toTopOf="@id/g_tv_top_t" />
+
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:fontFamily="@font/pretendard_bold"
+            android:includeFontPadding="false"
+            android:letterSpacing="0.25"
             android:text="@string/default_name"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:letterSpacing="0.25"
-            android:includeFontPadding="false"
-            app:layout_constraintTop_toTopOf="@id/g_tv_name_t"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_name_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_name_e"
             app:layout_constraintStart_toStartOf="@id/g_tv_name_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_name_e" />
+            app:layout_constraintTop_toTopOf="@id/g_tv_name_t" />
 
 
         <ImageView
             android:id="@+id/iv_profile"
             android:layout_width="84dp"
             android:layout_height="84dp"
-            app:layout_constraintTop_toTopOf="@id/g_iv_profile_t"
             app:layout_constraintBottom_toBottomOf="@id/g_iv_profile_b"
+            app:layout_constraintEnd_toEndOf="@id/g_iv_profile_e"
             app:layout_constraintStart_toStartOf="@id/g_iv_profile_s"
-            app:layout_constraintEnd_toEndOf="@id/g_iv_profile_e" />
+            app:layout_constraintTop_toTopOf="@id/g_iv_profile_t" />
 
         <ImageButton
             android:id="@+id/btn_detail"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/bg_go_to"
             android:background="@drawable/bg_bottom_nav"
-            android:minHeight="0dp"
             android:minWidth="0dp"
-            app:layout_constraintTop_toTopOf="@id/g_btn_detail_t"
+            android:minHeight="0dp"
+            android:src="@drawable/bg_go_to"
             app:layout_constraintBottom_toBottomOf="@id/g_btn_detail_b"
+            app:layout_constraintEnd_toEndOf="@id/g_btn_detail_e"
             app:layout_constraintStart_toStartOf="@id/g_btn_detail_s"
-            app:layout_constraintEnd_toEndOf="@id/g_btn_detail_e" />
+            app:layout_constraintTop_toTopOf="@id/g_btn_detail_t" />
 
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_profile"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:tabTextColor="@drawable/selector_nav_color_text"
-            app:tabTextAppearance="@style/tabTextStyle"
+            app:layout_constraintBottom_toBottomOf="@id/g_nav_b"
+            app:layout_constraintEnd_toEndOf="@id/g_nav_e"
+            app:layout_constraintStart_toStartOf="@id/g_nav_s"
+            app:layout_constraintTop_toTopOf="@id/g_nav_t"
+            app:tabBackground="@drawable/selector_nav_bg"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@drawable/selector_nav_color"
+            app:tabIndicatorHeight="0.5dp"
+            app:tabMode="fixed"
             app:tabPaddingEnd="-1dp"
             app:tabPaddingStart="-1dp"
-            app:tabIndicatorColor="@drawable/selector_nav_color"
-            app:tabBackground="@drawable/selector_nav_bg"
-            app:tabIndicatorHeight="0.5dp"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            app:layout_constraintTop_toTopOf="@id/g_nav_t"
-            app:layout_constraintBottom_toBottomOf="@id/g_nav_b"
-            app:layout_constraintStart_toStartOf="@id/g_nav_s"
-            app:layout_constraintEnd_toEndOf="@id/g_nav_e" >
-        </com.google.android.material.tabs.TabLayout>
+            app:tabTextAppearance="@style/tabTextStyle"
+            app:tabTextColor="@drawable/selector_nav_color_text"></com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@id/g_view_pager_t"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/g_nav_e"
             app:layout_constraintStart_toStartOf="@id/g_nav_s"
-            app:layout_constraintEnd_toEndOf="@id/g_nav_e" />
-
+            app:layout_constraintTop_toTopOf="@id/g_view_pager_t" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
