--- a/presentation/src/main/res/layout/item_tab_layout.xml
+++ b/presentation/src/main/res/layout/item_tab_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/g_iv_title_t"
@@ -37,10 +37,10 @@
         android:id="@+id/iv_title"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/g_iv_title_t"
         app:layout_constraintBottom_toBottomOf="@id/g_iv_title_b"
+        app:layout_constraintEnd_toEndOf="@id/g_iv_title_e"
         app:layout_constraintStart_toStartOf="@id/g_iv_title_s"
-        app:layout_constraintEnd_toEndOf="@id/g_iv_title_e" />
+        app:layout_constraintTop_toTopOf="@id/g_iv_title_t" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
