--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -180,6 +180,11 @@
             app:layout_constraintEnd_toEndOf="@id/g_btn_search_e"
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
             app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
-
+`
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fcv_main_entire_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.team_ia.idea_archive_android.ui.main.MainEntireFragment"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
