:memo: :: 구인 페이지 기본 Fragment 세팅 밑 전공 필터 RecyclerView textAllcaps 속성 추가
:: 구인 페이지 기본 Fragment 세팅 밑 전공 필터 RecyclerView textAllcaps 속성 추가

--- a/presentation/src/main/res/layout/item_major_filter.xml
+++ b/presentation/src/main/res/layout/item_major_filter.xml
@@ -19,6 +19,7 @@
             android:paddingHorizontal="12dp"
             android:paddingVertical="6dp"
             android:textColor="@color/black"
+            android:textAllCaps="false"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
