--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -191,5 +191,13 @@
             app:layout_constraintTop_toBottomOf="@id/g_tab_bar_b"
             tools:layout="@layout/fragment_main_entire" />
 
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fcv_main_job_opening_fragment_container"
+            android:name="com.team_ia.idea_archive_android.ui.main.MainJobOpeningFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/g_tab_bar_b"
+            tools:layout="@layout/fragment_main_job_opening" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
