--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -199,5 +199,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/g_tab_bar_b"
             tools:layout="@layout/fragment_main_job_opening" />
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fcv_main_feedback_fragment_container"
+            android:name="com.team_ia.idea_archive_android.ui.main.MainFeedbackFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/g_tab_bar_b"
+            tools:layout="@layout/fragment_main_feedback" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
