--- a/presentation/src/main/res/layout/fragment_auth_code_input_page.xml
+++ b/presentation/src/main/res/layout/fragment_auth_code_input_page.xml
@@ -222,6 +222,7 @@
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
             android:textSize="32sp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_1_e"
             app:layout_constraintStart_toStartOf="@id/g_text_s"
@@ -239,6 +240,7 @@
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
             android:textSize="32sp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_2_e"
             app:layout_constraintStart_toStartOf="@id/g_input_auth_code_2_s"
@@ -256,6 +258,7 @@
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
             android:textSize="32sp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_3_e"
             app:layout_constraintStart_toStartOf="@id/g_input_auth_code_3_s"
@@ -272,6 +275,7 @@
             android:inputType="number"
             android:textColor="@color/first_time_in_ia"
             android:textSize="32sp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="@id/g_input_auth_code_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_auth_code_4_e"
             app:layout_constraintStart_toStartOf="@id/g_input_auth_code_4_s"
