--- a/presentation/src/main/res/layout/fragment_sign_up_page.xml
+++ b/presentation/src/main/res/layout/fragment_sign_up_page.xml
@@ -236,6 +236,7 @@
             android:textColor="@color/black"
             android:textColorHint="@color/input_information_gray"
             android:textSize="12sp"
+            android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
             app:layout_constraintStart_toStartOf="@id/g_input_information_s"
             app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
@@ -253,6 +254,7 @@
             android:textColor="@color/black"
             android:textColorHint="@color/input_information_gray"
             android:textSize="12sp"
+            android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="@id/g_input_password_again_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
             app:layout_constraintStart_toStartOf="@id/g_input_information_s"
